Deployment/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  rules:
    - host: darlankenobi.com
      http:
        paths:
        - path: /
          backend:
            service:
              name: api-service
              port:
                number: 80
          pathType: Prefix
